apps/overlays/prod/frontend-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: store-frontend
spec:
  parentRefs:
  - name: external-gateway       # МЕНЯЕМ с external-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "shop.jenkinsdevops.org"
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: frontend
      port: 80
